added ast to winproj

--- a/win/cursive_win/cursive_win.vcxproj
+++ b/win/cursive_win/cursive_win.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\inc\ast.h" />
     <ClInclude Include="..\..\inc\diagnostics.h" />
     <ClInclude Include="..\..\inc\document.h" />
     <ClInclude Include="..\..\inc\node.h" />
