--- a/cursive.pdf/cursive.pdf.vcxproj.filters
+++ b/cursive.pdf/cursive.pdf.vcxproj.filters
@@ -24,9 +24,18 @@
     <ClInclude Include="inc\cursive\page.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\cursive\cursive.pdf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="document.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="page.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="inc\cursive\cursive.pdf.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
